--- a/Contact Details.html
+++ b/Contact Details.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     <h1>Contact Details</h1>
-    <h3><strong>Instagram: </strong></h3>
-    <h3>Email: </h3>
+    <h3><strong>Linkedin: linkedin.com/in/sai-kancharla </strong></h3>
+    <h3>Email: sumantk1904@gmail.com</h3>
     <h4><a href="index.html">back</a></h4>
   </body>
 </html>
